src/objects/Criminal_and_Legal_History__c.object
<CustomObject>
    <description>To record a client&apos;s criminal and legal history</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Criminal and Legal Histories</relationshipLabel>
        <relationshipName>Criminal_and_Legal_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Convictions_in_the_Past_12_Months__c</fullName>
        <label># Convictions in the Past 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currently_on_parole_probation__c</fullName>
        <label>Currently on parole/probation?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_most_recent_parole_violation__c</fullName>
        <label>Date of most recent parole violation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_most_recent_probation_violation__c</fullName>
        <label>Date of most recent probation violation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_most_recent_warrant__c</fullName>
        <label>Date of most recent warrant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Persistent_Misdemeanant__c</fullName>
        <label>Persistent Misdemeanant?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_Felony_Arrests__c</fullName>
        <label>Prior Felony Arrests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Felony_Convictions__c</fullName>
        <label>Prior Felony Convictions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Misdemeanor_Arrests__c</fullName>
        <label>Prior Misdemeanor Arrests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Misdemeanor_Convictions__c</fullName>
        <label>Prior Misdemeanor Convictions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Violent_Conviction_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prior Violent Conviction Charge</label>
        <referenceTo>Penal_Code__c</referenceTo>
        <relationshipLabel>Criminal and Legal Histories</relationshipLabel>
        <relationshipName>Criminal_and_Legal_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Violent_Conviction_Date__c</fullName>
        <label>Prior Violent Conviction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_Violent_Conviction__c</fullName>
        <label>Prior Violent Conviction?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_sex_offense__c</fullName>
        <label>Prior sex offense</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registered_sex_offender__c</fullName>
        <label>Registered sex offender</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Open_Cases__c</fullName>
        <label>Total Open Cases</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Prior_Arrests_RPT__c</fullName>
        <description>If Total Prior Arrests number field is blank, calculate Total Prior Arrests from sum of Prior Felony Arrests + Prior Misdemeanor Arrests</description>
        <formula>IF( Total_Prior_Arrests__c &gt; 0, Total_Prior_Arrests__c,
Prior_Felony_Arrests__c  +  Prior_Misdemeanor_Arrests__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prior Arrests RPT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Prior_Arrests__c</fullName>
        <label>Total Prior Arrests</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Prior_Convictions__c</fullName>
        <formula>Prior_Felony_Convictions__c + Prior_Misdemeanor_Convictions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prior Convictions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_parole_violations__c</fullName>
        <label>Total number of parole violations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_probation_violations__c</fullName>
        <label>Total number of probation violations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_warrants__c</fullName>
        <label>Total number of warrants</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X730_Evaluation__c</fullName>
        <inlineHelpText>Has a 730 Evaluation been scheduled or requested for the participant?</inlineHelpText>
        <label>730 Evaluation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_of_first_arrest__c</fullName>
        <label>Year of first arrest</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Criminal and Legal History</label>
    <nameField>
        <displayFormat>CLH-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criminal and Legal Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>